<resources>
    <string name="app_name">&appname;</string>
    <string name="error_generic_title">Error</string>
    <string name="error_generic_message">Se ha producido un error. Compruebe la conexión</string>
    <string name="play_services_dialog_title">Google Play Services</string>
    <string name="play_services_dialog_message">Es necesario disponer de una versión actualizada de Google Play Services</string>
    <string name="warning_connection_title">Sin conexión a internet.</string>
    <string name="warning_connection_description">Por favor, comprueba tu conexión.</string>
    <string name="warning_connection_button">Reintentar</string>
    <string name="splash_subtitle">Seguimiento de tu exposición al Covid-19</string>
    <string name="legal_info_title_small">LEGAL</string>
    <string name="legal_info_title">Información legal</string>
    <string name="legal_info_terms_and_conditions">Términos y condiciones</string>
    <string name="legal_info_privacy_policy">Acepto la <b><u>política de privacidad</u></b></string>
    <string name="legal_info_usage_conditions">He leído las <b><u>condiciones de uso</u></b></string>
    <string name="legal_info_usage_policy_conditions">Aceptar política de privacidad y condiciones de uso</string>
    <string name="legal_info_check_warning">Recuerda que tienes que aceptar la política de privacidad para continuar</string>
    <string name="legal_info_button">Continuar</string>
    <string name="legal_info_detail_title">CONDICIONES DE USO DE &appname;</string>
    <string name="legal_info_intro">AL DESCARGAR Y USAR LA APLICACIÓN MÓVIL “Radar COVID” MANIFIESTAS QUE HAS LEÍDO Y ACEPTAS ESTAS CONDICIONES DE USO Y LA POLÍTICA DE PRIVACIDAD. AQUÍ SE RECOGE TODA LA INFORMACIÓN RELATIVA A TUS DERECHOS Y OBLIGACIONES COMO USUARIO DE ESTA APLICACIÓN.\n\n<b>AVISO IMPORTANTE:</b>\n\n&#8226; El USUARIO de esta aplicación queda avisado de que al descargar la aplicación en su dispositivo móvil y utilizarla, se está limitando a participar voluntariamente en una <b>EXPERIENCIA PILOTO CON DATOS FICTICIOS de alerta de contagios de la COVID-19 en LA ISLA DE LA GOMERA.</b>\n\n&#8226; <b>Se informa asimismo de que esta aplicación dejará de funcionar una vez que</b> termine la experiencia piloto.\n\n&#8226; Por tanto, en el uso de la aplicación, <b>todas las notificaciones de exposiciones a posible contagio de la enfermedad que el usuario pueda recibir corresponden a supuestos simulados y, por el mismo motivo, al tratarse de una experiencia piloto con datos ficticios, las sugerencias de adopción de medidas preventivas y asistenciales que tras esa notificación le facilite la aplicación no tienen otro valor que comprobar que la aplicación es capaz de facilitar sugerencias de ese tipo a un usuario que recibiera una notificación de exposición a posible contagio.</b>\n\n&#8226; <b>Tanto en el marco de esta experiencia piloto con datos ficticios como en el caso de que la aplicación se hubiera utilizado en situaciones reales con datos reales</b>, el USUARIO queda avisado de que la utilización de la Aplicación <b>NO CONSTITUYE EN NINGÚN CASO UN SERVICIO DE DIAGNÓSTICO MÉDICO, DE ATENCIÓN DE URGENCIAS O DE PRESCRIPCIÓN DE TRATAMIENTOS FARMACOLÓGICOS</b>, pues la utilización de la Aplicación <b>no podría en ningún caso sustituir la consulta presencial personal frente a un profesional médico debidamente cualificado.</b></string>
    <string name="conditions_p1_title"><b>1. Qué es &appname;</b></string>
    <string name="conditions_p1_content">&appname; es una aplicación que promueve la salud pública mediante un sistema de alerta de contagios por la COVID-19, poniendo a disposición de los USUARIOS (en adelante, individualmente, el “USUARIO”, y conjuntamente los “USUARIOS”), la posibilidad de navegar por la Aplicación, accediendo a los contenidos y servicios de Radar COVID, de acuerdo con las presentes CONDICIONES DE USO.\n\nRadar COVID detecta la intensidad de señales Bluetooth intercambiadas entre dispositivos que tienen esta aplicación activa, mediante el empleo de identificadores aleatorios efímeros, que no guardan relación con la identidad del teléfono móvil empleado o el USUARIO. El dispositivo de cada USUARIO descarga periódicamente las claves Bluetooth de todos los USUARIOS de la aplicación que hayan informado a través de la misma que se les ha diagnosticado COVID-19 (previa acreditación de las autoridades sanitarias), procediendo a determinar si el USUARIO ha establecido contacto de riesgo con alguno de ellos, verificado por las señales Bluetooth intercambiadas. Si es el caso, la aplicación le notifica este hecho, a fin de que pueda para tomar medidas, y contribuir de este modo a evitar que el virus se propague.</string>
    <string name="conditions_p2_title"><b>2. Uso de &appname;</b></string>
    <string name="onboarding_title_step_2">Tu privacidad es nuestra prioridad</string>
    <string name="onboarding_descrption_step2">Nuestros compromisos</string>
    <string name="onboarding_step_2_commitments_title_1">Anonimato</string>
    <string name="onboarding_step_2_commitments_detail_1">La aplicación funciona sin revelar tu identidad ni la de tu smartphone. <b>NO</b> se recoge tu nombre, email, geolocalización, ni tu teléfono.</string>
    <string name="onboarding_step_2_commitments_title_2">Discreción</string>
    <string name="onboarding_step_2_commitments_detail_2">Las alertas de exposición se envían sin indicar cuándo y dónde se produjo la exposición.</string>
    <string name="onboarding_step_2_commitments_title_3">Tú decides</string>
    <string name="onboarding_step_2_commitments_detail_3">Elige en todo momento si quieres desactivar el servicio o dejar de utilizar la App.</string>
    <string name="onboarding_title_step_3">Cómo funciona</string>
    <string name="onboarding_step_3_instructions_title_1">01</string>
    <string name="onboarding_step_3_instructions_detail_1">Activa tu Bluetooth. Eso es todo lo que te pedimos.</string>
    <string name="onboarding_step_3_instructions_title_2">02</string>
    <string name="onboarding_step_3_instructions_detail_2">Visita la App con frecuencia para visualizar tu grado de exposición al coronavirus.</string>
    <string name="onboarding_step_3_instructions_title_3">03</string>
    <string name="onboarding_step_3_instructions_detail_3">En caso de haber estado expuesto o reportar un diagnóstico positivo sigue las indicaciones que te enviaremos.</string>
    <string name="onboarding_title_step_4">RECOMENDACIONES</string>
    <string name="onboarding_descrption_step4_p1">Protégete a sí mismo y a quienes te rodean informándote y tomando las precauciones adecuadas. Sigue los consejos de tu organismo de salud pública local.  Para evitar la propagación de la COVID-19:</string>
    <string name="onboarding_descrption_step4_p2">Evitar las visitas innecesarias a los centros de atención médica permite que los sistemas sanitarios funcionen con mayor eficacia, lo que redunda en su protección y en la de los demás</string>
    <string name="onboarding_descrption_step4_t1">Lávate las manos con frecuencia. Usa agua y jabón o un desinfectante de manos a base de alcohol.</string>
    <string name="onboarding_descrption_step4_t2">Manténte a una distancia segura de cualquier persona que tosa o estornude. </string>
    <string name="onboarding_descrption_step4_t3">No te toque los ojos, la nariz o la boca.</string>
    <string name="onboarding_descrption_step4_t4">Cuando tosas o estornudes, cúbrete la nariz y la boca con el codo flexionado o con un pañuelo desechable. </string>
    <string name="onboarding_descrption_step4_t5">Quédate en casa si te sientes mal.</string>
    <string name="onboarding_descrption_step4_t6">Si tienen fiebre, tos y dificultad para respirar, solicita atención médica. Llama con antelación.</string>
    <string name="onboarding_descrption_step4_t7">Sigue las instrucciones de tu organismo sanitario local.</string>
    <string name="exposure_detail_what_to_do">¿Qué debo hacer?</string>
    <string name="exposure_detail_acknowledgement_message">Gracias por seguir cuidándote y cuidando a los demás.</string>
    <string name="exposure_detail_infected_p1"><b>Tu diagnostico nos ayuda a proteger a los demás.</b>\n\nSin revelar tu identidad en ningún momento, hemos comunicado tu diagnóstico a móviles han estado cerca de ti en los últimos días y les enviaremos una alerta para su seguridad.</string>
    <string name="exposure_detail_infected_what_to_do_subtitle">Sigue las siguientes recomendaciones y los consejos de tu centro de salud</string>
    <string name="exposure_detail_infected_tips_title">Sigue las siguientes recomendaciones y los consejos de tu centro de salud</string>
    <string name="confirmation_tip_1">Permanece en casa, preferentemente en tu habitación y no compartas el baño</string>
    <string name="confirmation_tip_2">Evita el contacto con otras personas</string>
    <string name="confirmation_tip_3">Usa siempre mascarilla quirúrgica</string>
    <string name="confirmation_tip_4">Lávate las manos frecuentemente</string>
    <string name="confirmation_tip_5">Ante la aparición de algún síntoma (fiebre, tos, dificultad respiratoria) llama a tu centro de salud</string>
    <string name="confirmation_tip_6">Si los síntomas empeoran llama al 112</string>
    <string name="my_data_title">MIS DATOS</string>
    <string name="my_data_subtitle">Tu privacidad es lo más importante</string>
    <string name="my_data_l1"><b>NO</b> recogemos ningún dato personal (nombre, dirección, edad, teléfono, correo electrónico…)</string>
    <string name="my_data_l2"><b>NO</b> recogemos ningún dato de geolocalización, incluidos los datos del GPS</string>
    <string name="my_data_l3_title">Por tanto:</string>
    <string name="my_data_l3">Por tanto:\n<b>NO</b> podemos determinar tu identidad ni saber las personas con las que has estado</string>
    <string name="my_data_encription_info">Los datos son guardados en tu teléfono y la conexión con el servidor están encriptados</string>
</resources>